# rust-vanity-address

./: LICENSE
rust-vanity-address/: Cargo.toml  README.md
rust-vanity-address/src/: main.rs  vanity.rs
