[package]
name = "solana-vanity"
version = "0.1.0"
edition = "2021"
description = "High-performance Solana vanity address generator in Rust"
authors = ["Isaac Adebayo <isaac@bytegen.dev>"]
license = "MIT"

[dependencies]
# Solana and crypto
solana-sdk = "1.17"
bs58 = "0.5"

# CLI and user interface
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Parallel processing
rayon = "1.8"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
humantime = "2.1"
num_cpus = "1.0"
hex = "0.4"
